# docs/openapi.yaml
@@ -174,6 +174,12 @@ components:
     PositionResponse:
       additionalProperties: false
       properties:
+        estimatedArrivalAt:
+          format: date-time
+          type: string
+        estimatedDurationSeconds:
+          format: int64
+          type: integer
         id:
           type: string
         lat:
@@ -199,6 +205,8 @@ components:
         - lat
         - lng
         - recordedAt
+        - estimatedDurationSeconds
+        - estimatedArrivalAt
       type: object
     PositionsResponse:
       additionalProperties: false
@@ -257,6 +265,14 @@ components:
     StartTripRequestBody:
       additionalProperties: false
       properties:
+        destinationLat:
+          format: double
+          type: number
+        destinationLng:
+          format: double
+          type: number
+        destinationName:
+          type: string
         direction:
           enum:
             - DEPART
@@ -272,6 +288,9 @@ components:
         - direction
         - lat
         - lng
+        - destinationName
+        - destinationLat
+        - destinationLng
       type: object
     StartTripResponse:
       additionalProperties: false
@@ -331,6 +350,14 @@ components:
     TripResponse:
       additionalProperties: false
       properties:
+        destinationLat:
+          format: double
+          type: number
+        destinationLng:
+          format: double
+          type: number
+        destinationName:
+          type: string
         direction:
           type: string
         id:
@@ -347,6 +374,9 @@ components:
         - partyId
         - userId
         - direction
+        - destinationName
+        - destinationLat
+        - destinationLng
         - startedAt
       type: object
     UpdateMeRequestBody:
